add codingeverything!!! to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	</head>
 
 	<body>
-                        Hello World, 7thkey
+      Hello World, 7thkey
+       codingeverything!!!
 	</body>
 </html>
